--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </main>
   <footer class="footer page__section">
     <p class="footer__copyright">
-      © 2021 Mesto Russia
+      © 2023 Mesto Russia
     </p>
   </footer>
   <div class="popup popup_type_edit">
@@ -71,8 +71,7 @@
     <img class="card__image" src="" alt="" />
     <button type="button" class="card__delete-button"></button>
     <div class="card__description">
-      <h2 class="card__title">
-      </h2>
+      <h2 class="card__title"></h2>
       <button type="button" class="card__like-button"></button>
     </div>
   </li>
