--- a/src/index.html
+++ b/src/index.html
@@ -37,10 +37,18 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Редактировать профиль</h3>
-      <form class="popup__form" name="edit-profile">
-        <input type="text" name="name" class="popup__input popup__input_type_name" placeholder="Имя" required>
-        <input type="text" name="description" class="popup__input popup__input_type_description" placeholder="Занятие" required>
-        <button type="submit" class="button popup__button">Сохранить</button>
+      <form class="popup__form" name="edit-profile" novalidate>
+        <fieldset class="popup__set">
+          <label class="popup__field">
+            <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="name" class="popup__input popup__input_type_name" id="name-input" placeholder="Имя" minlength="2" maxlength="40" required>
+            <span class="input__error name-input-error"></span>
+          </label>
+          <label class="popup__field">
+            <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="description" class="popup__input popup__input_type_description" id="description-input" placeholder="Занятие" minlength="2" maxlength="200" required>
+            <span class="input__error description-input-error"></span>
+          </label>
+          <button type="submit" class="button popup__button">Сохранить</button>
+        </fieldset>
       </form>
     </div>
   </div>
@@ -48,10 +56,18 @@
     <div class="popup__content">
       <button type="button" class="popup__close"></button>
       <h3 class="popup__title">Новое место</h3>
-      <form class="popup__form" name="new-place">
-        <input type="text" name="place" class="popup__input popup__input_type_card-name" placeholder="Название" required>
-        <input type="url" name="link" class="popup__input popup__input_type_url" placeholder="Ссылка на картинку" required>
+      <form class="popup__form" name="new-place" novalidate>
+        <fieldset class="popup__set">
+          <label class="popup__field">
+        <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+/v" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="place" class="popup__input popup__input_type_card-name" id="place-input" placeholder="Название" minlength="2" maxlength="30" required>
+        <span class="input__error place-input-error"></span>
+          </label>
+          <label class="popup__field">
+        <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+/v" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="url" name="link" class="popup__input popup__input_type_url" id="link-input" placeholder="Ссылка на картинку" required>
+        <span class="input__error link-input-error"></span>
+        </label>
         <button type="submit" class="button popup__button">Сохранить</button>
+      </fieldset>
       </form>
     </div>
   </div>
