--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,14 @@
   </header>
   <main class="content">
     <section class="profile page__section">
-      <div class="profile__image"></div>
+      <div class="profile__image-container">
+        <div class="profile__image"></div>
+        <div class="profile__image-overlay"></div>
+      </div>
       <div class="profile__info">
-        <h1 class="profile__title">Жак-Ив Кусто</h1>
+        <h1 class="profile__title"></h1>
         <button class="profile__edit-button" type="button"></button>
-        <p class="profile__description">Исследователь океана</p>
+        <p class="profile__description"></p>
       </div>
       <button class="profile__add-button" type="button"></button>
     </section>
@@ -40,11 +43,11 @@
       <form class="popup__form" name="edit-profile" novalidate>
         <fieldset class="popup__set">
           <label class="popup__field">
-            <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="name" class="popup__input popup__input_type_name" id="name-input" placeholder="Имя" minlength="2" maxlength="40" required>
+            <input pattern="[a-zA-zа-яА-яёЁ\s\-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="name" class="popup__input popup__input_type_name" id="name-input" placeholder="Имя" minlength="2" maxlength="40" required>
             <span class="input__error name-input-error"></span>
           </label>
           <label class="popup__field">
-            <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="description" class="popup__input popup__input_type_description" id="description-input" placeholder="Занятие" minlength="2" maxlength="200" required>
+            <input pattern="[a-zA-zа-яА-яёЁ\s\-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="description" class="popup__input popup__input_type_description" id="description-input" placeholder="Занятие" minlength="2" maxlength="200" required>
             <span class="input__error description-input-error"></span>
           </label>
           <button type="submit" class="button popup__button">Сохранить</button>
@@ -59,11 +62,11 @@
       <form class="popup__form" name="new-place" novalidate>
         <fieldset class="popup__set">
           <label class="popup__field">
-        <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+/v" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="place" class="popup__input popup__input_type_card-name" id="place-input" placeholder="Название" minlength="2" maxlength="30" required>
+        <input pattern="[a-zA-zа-яА-яёЁ\s\-]+$" data-error-message="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="text" name="place" class="popup__input popup__input_type_card-name" id="place-input" placeholder="Название" minlength="2" maxlength="30" required>
         <span class="input__error place-input-error"></span>
           </label>
           <label class="popup__field">
-        <input pattern="[a-zA-Zа-яА-ЯёЁ\s-]+/v" title="Разрешены только латинские, кириллические буквы, знаки дефиса и пробелы" type="url" name="link" class="popup__input popup__input_type_url" id="link-input" placeholder="Ссылка на картинку" required>
+        <input type="url" name="link" class="popup__input popup__input_type_url" id="link-input" placeholder="Ссылка на картинку" required>
         <span class="input__error link-input-error"></span>
         </label>
         <button type="submit" class="button popup__button">Сохранить</button>
@@ -78,6 +81,20 @@
       <p class="popup__caption"></p>
     </div>
   </div>
+  <div class="popup popup_type_avatar popup_is-animated">
+    <div class="popup__content popup__content_avatar">
+      <button type="button" class="popup__close"></button>
+      <h3 class="popup__title">Обновить аватар</h3>
+      <form class="popup__form" name="new-avatar" novalidate>
+        <fieldset class="popup__set">
+        <label class="popup__field">
+          <input type="url" name="link" class="popup__input popup__input_type_url" id="link-input" placeholder="Ссылка на картинку" required>
+          <span class="input__error link-input-error"></span>
+        </label>
+        <button type="submit" class="button popup__button">Сохранить</button>
+      </fieldset>
+    </div>
+  </div>
 </div>
 <template id="card-template">
   <li class="places__item card">
@@ -85,7 +102,10 @@
     <button type="button" class="card__delete-button"></button>
     <div class="card__description">
       <h2 class="card__title"></h2>
-      <button type="button" class="card__like-button"></button>
+      <div>
+        <button type="button" class="card__like-button"></button>
+        <p class="card__quantity-likes">0</p>
+      </div>
     </div>
   </li>
 </template>
